# fasapi_estudo

./: README.md  database.db  pyproject.toml  random.json
fast_curso/: app.py  database.py  models.py  schemas.py  segurity.py  settings.py
migrations/: env.py
migrations/versions/: 4f595e1f894e_adicionando_coluna_de_update.py  b27095ceb460_create_user_table.py
tests/: conftest.py  test_app.py  test_db.py  test_token.py
